cours sur FETCH

--- a/projets/Juste_Prix/style.css
+++ b/projets/Juste_Prix/style.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
     background-color: #232020;
     min-width: 500px;
   }
@@ -28,4 +28,4 @@ html, body {
   
   .fini {
     background-color : #0c9463;
-  }
+  } */
