--- a/projets/Meteo/style.css
+++ b/projets/Meteo/style.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
     background: #2980B9;
     background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
     background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
@@ -16,4 +16,4 @@ html, body {
   #changer {
     background: rgba(178, 223, 251, .3);
     cursor: pointer;
-  }
+  } */
