--- a/projets/Citations/style.css
+++ b/projets/Citations/style.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
   background: #5C258D;
   background: -webkit-linear-gradient(to right, #4389A2, #5C258D);
   background: linear-gradient(to right, #4389A2, #5C258D);
@@ -31,4 +31,4 @@ html, body {
   background: -webkit-linear-gradient(to right, #ff5e62, #ff9966);
   background: linear-gradient(to right, #ff5e62, #ff9966);
   cursor: pointer;
-}
+} */
